<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Visual Tonality</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="mainMenuItems">
        <item >About Virtual Tonality</item>
        <item >Music Tutorials</item>
        <item>Sheet Music Player</item><item >Help</item>
        
    </string-array>
        <string name="icon">Icon</string>
        <string name="sheet_music">Sheet Music</string>
        <string name="musicPlay">Play</string>
        <string name="menu_help">Help</string>
        <string name="menu_info">Info</string>
        <string name="menu_exit">Exit</string>
        <string-array name="listSongs">
            <item >Jingle Bells</item>
        </string-array>
            <string name="sharp">Sharp</string>
            <string name="flat">Flat</string>
            <string name="chord">Chord</string>
            <string name="wrong">Wrong!</string>
            <string name="cdefg">C, D, E, F#, G, A, B</string>
            <string name="cdef">C, D, E, F, G, A, B Flat</string>
            <string name="cdefga">C, D, E, F, G, A, B</string>
            <string name="radio13">F,G,A</string>
            <string name="radio23">F,A,C</string>
            <string name="radio33">F,A Flat, C</string>
        

</resources>
