<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notes_quiz"    
    tools:context=".MainActivity" >
    
    <com.google.ads.AdView android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         ads:adUnitId="ca-app-pub-8110186678980015/7356212135"
                         ads:adSize="SMART_BANNER"                         
                         ads:loadAdOnCreate="true"/>

    <Button
        android:id="@+id/submitBtnNQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:textColor="#ffffff"
        android:text="Submit" />

    <TextView
        android:id="@+id/textCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/submitBtnNQ1"
        android:layout_alignTop="@+id/submitBtnNQ1"
        android:layout_marginTop="52dp"
        android:textColor="#ffffff"
        android:text="Correct!"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitBtnNQ1"
        android:layout_alignLeft="@+id/textCorrect"
        android:textColor="#ffffff" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sharp"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flat"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chord"
            android:textColor="#ffffff" />
    </RadioGroup>

    <TextView
        android:id="@+id/textWrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textCorrect"
        android:layout_centerHorizontal="true"
        android:text="@string/wrong"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/nextBtnNotesQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/nextbtn" />

    <ImageButton
        android:id="@+id/backBtnNotesQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/backbtn" />

</RelativeLayout>