<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chords_quiz"   
    tools:context=".MainActivity" >
    
    <com.google.ads.AdView android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         ads:adUnitId="ca-app-pub-8110186678980015/7356212135"
                         ads:adSize="SMART_BANNER"                         
                         ads:loadAdOnCreate="true"/>

    <Button
        android:id="@+id/submitBtnCQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:textColor="#ffffff"
        android:text="Submit" />

    <ImageButton
        android:id="@+id/nextBtnChordsQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/nextbtn" />

    <ImageButton
        android:id="@+id/backBtnChordsQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/backbtn" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitBtnCQ1"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" >

        <RadioButton
            android:id="@+id/radio13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:checked="true"
            android:text="@string/radio13" />

        <RadioButton
            android:id="@+id/radio23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/radio23" />

        <RadioButton
            android:id="@+id/radio33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/radio33" />
    </RadioGroup>

    <TextView
        android:id="@+id/textCorrect4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/backBtnChordsQ1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:textColor="#ffffff"
        android:text="Correct!"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textWrong4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textCorrect4"
        android:layout_alignBottom="@+id/textCorrect4"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:text="@string/wrong"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

</RelativeLayout>